--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "express": "^4.18.2",
     "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0"
+  },
+  "devDependencies": {
+    "webpack-node-externals": "^3.0.0"
   }
 }
