--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "./node_modules/.bin/netlify-lambda serve src",
-    "build": "./node_modules/.bin/netlify-lambda build src"
+    "start": "netlify-lambda serve src",
+    "build": "netlify deploy --prod"
   },
   "keywords": [],
   "author": "",
@@ -15,6 +15,8 @@
     "alchemy-sdk": "^2.9.2",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "netlify": "^13.1.10",
+    "netlify-cli": "^16.2.0",
     "netlify-lambda": "^2.0.16",
     "serverless-http": "^3.2.0"
   },
